Fix footer alignment

--- a/app/scss/layers/_footer.scss
+++ b/app/scss/layers/_footer.scss
@@ -42,7 +42,6 @@
 }
 
 .contentinfoCopyright {
-  text-align: center;
   padding-top: 20px;
   padding-bottom: 20px;
 }
